math-core/src/snapshots/math_core__lexer__tests__begin_array.snap
---
source: math-core/src/lexer.rs
expression: "\\begin{array}{c|c}"
---
0: Begin
6: EnvName(Array)
13: GroupBegin
14: Letter('c')
15: Ord(OrdLike { char: '|', cat: FG })
16: Letter('c')
17: GroupEnd
