math-core/src/snapshots/math_core__lexer__tests__color.snap
---
source: math-core/src/lexer.rs
expression: "{x\\color{red} y}"
---
0: GroupBegin
1: Letter('x')
2: Color
8: GroupBegin
9: Letter('r')
10: Letter('e')
11: Letter('d')
12: GroupEnd
14: Letter('y')
15: GroupEnd
