math-core/src/snapshots/math_core__lexer__tests__color_newline.snap
---
source: math-core/src/lexer.rs
expression: "{x\\color\n{red} y}"
---
0: GroupBegin
1: Letter('x')
2: Color
9: StringLiteral("red")
15: Letter('y')
16: GroupEnd
