math-core/src/snapshots/math_core__lexer__tests__comment.snap
---
source: math-core/src/lexer.rs
expression: "ab%hello\ncd"
---
0: Letter('a')
1: Letter('b')
9: Letter('c')
10: Letter('d')
