math-core/src/snapshots/math_core__lexer__tests__custom_space.snap
---
source: math-core/src/lexer.rs
expression: "{x\\hspace{2em}}"
---
0: GroupBegin
1: Letter('x')
2: CustomSpace
9: GroupBegin
10: Digit('2')
11: Letter('e')
12: Letter('m')
13: GroupEnd
14: GroupEnd
