math-core/src/snapshots/math_core__lexer__tests__disallowed_chars.snap
---
source: math-core/src/lexer.rs
expression: "\\begin{matrix x + y}"
---
Error at 16: DisallowedChar('+')
