math-core/src/snapshots/math_core__lexer__tests__early_error.snap
---
source: math-core/src/lexer.rs
expression: "{x + \\unknowncmd + y}"
---
Error at 5: UnknownCommand("unknowncmd")
