math-core/src/snapshots/math_core__lexer__tests__end_array.snap
---
source: math-core/src/lexer.rs
expression: "\\end{array}{c|c}"
---
0: End
4: EnvName(Array)
11: GroupBegin
12: Letter('c')
13: Ord(OrdLike { char: '|', cat: FG })
14: Letter('c')
15: GroupEnd
